<resources>
    <string name="app_name">Login And Signup</string>

    <!-- ================================================================================================== -->
    <!--                                           LOGIN & SIGNUP                                           -->
    <!-- ================================================================================================== -->

    <string name="welcome">Welcome,</string>
    <string name="glad_to_see_you">Glad to see you!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="smart_engineer_logo">Smart Engineer Logo</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="sl_icon">SL Icon</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sloganSmartEngineer">\'উৎসর্গ সকল স্মার্ট ইঞ্জিনিয়ারদের প্রতি\'</string>
    <string name="labib">LaBiB</string>

</resources>