<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sideBar"
    android:paddingBottom="@dimen/size_2xlarge"
    style="@style/sideBar">

        <LinearLayout
            android:id="@+id/sideBarProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size_sidebar_pic"
                android:layout_height="@dimen/size_sidebar_pic"
                android:layout_marginTop="@dimen/size_2xlarge"
                android:layout_marginBottom="@dimen/size_small"
                app:cardCornerRadius="100dp">

                <ImageView
                    style="@style/sideBarLogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/smart_engineer_logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/sideBarTitle"
                android:text="@string/labib"
                style="@style/sideBarTitle" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sideBar_BottomLayout"
            android:layout_below="@+id/sideBarProfile"
            android:layout_margin="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sideBar_btnLogin"
                    android:contentDescription="@string/sl_icon"
                    style="@style/sl_sidebar_icon"
                    android:src="@drawable/sl_login" />

                <ImageView
                    android:id="@+id/sideBar_btnSignUp"
                    android:contentDescription="@string/sl_icon"
                    style="@style/sl_sidebar_icon"
                    android:src="@drawable/sl_gmail" />

                <ImageView
                    android:id="@+id/sideBar_btnGoogle"
                    android:contentDescription="@string/sl_icon"
                    style="@style/sl_sidebar_icon"
                    android:src="@drawable/sl_google" />

                <ImageView
                    android:id="@+id/sideBar_btnFacebook"
                    android:contentDescription="@string/sl_icon"
                    style="@style/sl_sidebar_icon"
                    android:src="@drawable/sl_facebook" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/sideBar_BottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/sideBar_btnSettings"
                android:contentDescription="@string/sl_icon"
                style="@style/sl_sidebar_icon"
                android:background="@drawable/sl_button_selected"
                android:layout_marginBottom="0dp"
                android:src="@drawable/sl_sun" />
        </LinearLayout>

</RelativeLayout>